--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
 /* BEGIN (write your solution here) */
 p {
     margin-bottom: 12px;
+    font-style: italic; /* Курсив */
+}
+ul {
+  list-style-type: circle; /* Меняем маркеры у списка. Возможные варианты тут: 
+                            https://www.w3schools.com/cssref/pr_list-style-type.asp */
 }
 
 h1, h2, h3 {
@@ -27,6 +32,7 @@ h2 {
     border-bottom-width: 1px;
     border-bottom-color: grey;
     margin-bottom: 8px;
+    border-bottom: 2px solid #ccc; /* Задает рамку снизу. */
 }
 
 h3 {
